imagenes , html y estilos de la pagina

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <img id="beta" src="./assets/img/googlechromebeta_103880.webp" alt="google beta">
     <img id="RinconCaseroIcono" src="./assets/img/riconoRinconCaseroIcono.png" alt="rincon casero icono">
     <a href="tel:+34 622 08 70 50"><img id="Tfriconcasero" src="./assets/img/numeroTf.png" alt="numero de telefono rincon casero"></a>
     <div id="medio">
@@ -32,7 +33,8 @@
             </div>
         </nav>
         <!--    LOS POLLOS      -->
-        <div class="central">
+        <hr class="central" id="linea">
+        <div class="central" id="polloLaterales">
             <h2>🍗 POLLOS ASADOS 🍗</h2>
             <h2>- Menu 13€ -</h2>
             <ul>
@@ -42,6 +44,34 @@
                 <li>Pan</li>
             </ul>
         </div>
+        <img id="pollos" src="./assets/img/pollos.png" alt="imagen de pollos del local">
+        <hr class="central" id="linea">
+        <div class="central" id="polloLaterales">
+            <h2>🍽️  RACION 🍽️</h2>
+            <h2>- Racion 9€ - </h2>
+            <ul>
+                <li>Pollo</li>
+                <li>Racion Patatas</li>
+                <li>Refresco</li>
+                <li>Pan</li>
+            </ul>
+        </div>
+        <img id="pollos" src="./assets/img/pollos.png" alt="imagen de pollos del local">
+        <hr class="central" id="linea">
+        <div class="central" id="polloLaterales">
+            <h2>🍗 POLLOS ASADOS 🍗</h2>
+            <h2>- Menu 13€ -</h2>
+            <ul>
+                <li>Pollo</li>
+                <li>Racion Patatas</li>
+                <li>Refresco</li>
+                <li>Pan</li>
+            </ul>
+        </div>
+        <img id="pollos" src="./assets/img/pollos.png" alt="imagen de pollos del local">
+
     </div>
+    
+
 </body>
 </html>
