responsive de la pagina

--- a/src/index.html
+++ b/src/index.html
@@ -35,32 +35,36 @@
 
         <!--    LOS POLLOS      -->
         <hr class="central" id="linea">
-        <div class="central" id="polloLaterales">
-            <h2>🍗 POLLOS ASADOS 🍗</h2>
-            <h2>- Menú 13€ -</h2>
-            <ul>
-                <li>Pollo</li>
-                <li>Ración Patatas</li>
-                <li>Refresco</li>
-                <li>Pan</li>
-            </ul>
+        <div id="pollo-raciones-container">
+            <div id="pollo-raciones">
+                <h2>🍗 POLLOS ASADOS 🍗</h2>
+                <h2>- Menú 13€ -</h2>
+                <ul>
+                    <li>Pollo</li>
+                    <li>Ración Patatas</li>
+                    <li>Refresco</li>
+                    <li>Pan</li>
+                </ul>
+            </div>
+            <img id="pollos" class="imagenes" src="./assets/img/pollos.png" alt="imagen de pollos del local">
         </div>
-        <img id="pollos" class="imagenes" src="./assets/img/pollos.png" alt="imagen de pollos del local">
 
         <!--    LAS RACIONES    -->
         <hr class="central" id="linea">
-        <div class="central" id="polloLaterales">
-            <h2>🍽️ RACIÓN 🍽️</h2>
-            <p>Variación de platos diario, mirar redes sociales para comprobar los platos del día</p>
-            <h2>- Ración 8€ - </h2>
-            <ul>
-                <li>Primero</li>
-                <li>Segundo</li>
-                <li>Postre</li>
-                <li>Refresco</li>
-            </ul>
+        <div id="pollo-raciones-container">
+            <div id="pollo-raciones">
+                <h2>🍽️ RACIÓN 🍽️</h2>
+                <p>Variación de platos diario, mirar redes sociales para comprobar los platos del día</p>
+                <h2>- Ración 8€ - </h2>
+                <ul>
+                    <li>Primero</li>
+                    <li>Segundo</li>
+                    <li>Postre</li>
+                    <li>Refresco</li>
+                </ul>
+            </div>
+            <img id="comida" class="imagenes" src="./assets/img/comida4.png" alt="imágenes de comida">
         </div>
-        <img id="comida" class="imagenes" src="./assets/img/comida4.png" alt="imágenes de comida">
 
         <!--    QUIÉNES SOMOS   -->
         <hr class="central" id="linea">
@@ -73,5 +77,8 @@
         </div>    
         
     </div>
+
+    <a href="https://github.com/Adricarmona"><img id="github" src="./assets/img/github.png" alt="github del creador"></a>
+    <a href="https://www.linkedin.com/in/adriancarmonagalvez/"><img id="linkedin" src="./assets/img/linkedin.png" alt="linkedin del creador"></a>
 </body>
 </html>
